// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EventFormPlaces > should render a classed event in per-day mode 1`] = `
<div>
  <div
    class="MuiBox-root css-1c355sx"
  >
    <div
      class="MuiStack-root css-3jt9ux-MuiStack-root"
    >
      <div
        class="MuiStack-root css-ca49iu-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
        >
          event.placesEditor.title
        </h6>
        <div
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="total"
          >
            event.placesEditor.total
          </button>
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-middleButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="-1"
            type="button"
            value="perDay"
          >
            event.placesEditor.perDay
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="-1"
            type="button"
            value="perClass"
          >
            event.placesEditor.perClass
          </button>
        </div>
      </div>
      <table
        class="MuiTable-root css-1nkh8i9-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-cdeinc-MuiTableCell-root"
              scope="col"
            >
              date
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-m4o53m-MuiTableCell-root"
              scope="col"
            >
              Paikat
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              dateFormat.wdshort date
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              <div
                class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                inputmode="numeric"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dateFormat.wdshort date Paikat"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                    id="_r_6_"
                    pattern="[0-9]{1,3}"
                    style="padding: 4px; text-align: right;"
                    type="text"
                    value="5"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-1nf2c5d-MuiNotchedOutlined-root"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              dateFormat.wdshort date
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              <div
                class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                inputmode="numeric"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dateFormat.wdshort date Paikat"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                    id="_r_7_"
                    pattern="[0-9]{1,3}"
                    style="padding: 4px; text-align: right;"
                    type="text"
                    value="5"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-1nf2c5d-MuiNotchedOutlined-root"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              Yhteensä
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              10
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiFormHelperText-root Mui-error css-18y2hez-MuiFormHelperText-root"
      />
    </div>
  </div>
</div>
`;

exports[`EventFormPlaces > should render with class places (per-class mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-1c355sx"
  >
    <div
      class="MuiStack-root css-3jt9ux-MuiStack-root"
    >
      <div
        class="MuiStack-root css-ca49iu-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
        >
          event.placesEditor.title
        </h6>
        <div
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="false"
            class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            disabled=""
            tabindex="-1"
            title="event.placesEditor.locked"
            type="button"
            value="total"
          >
            event.placesEditor.total
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-middleButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            disabled=""
            tabindex="-1"
            title="event.placesEditor.locked"
            type="button"
            value="perDay"
          >
            event.placesEditor.perDay
          </button>
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="perClass"
          >
            event.placesEditor.perClass
          </button>
        </div>
      </div>
      <table
        class="MuiTable-root css-1nkh8i9-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-cdeinc-MuiTableCell-root"
              scope="col"
            >
              date
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-m4o53m-MuiTableCell-root"
              scope="col"
            >
              ALO
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-m4o53m-MuiTableCell-root"
              scope="col"
            >
              Yhteensä
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              dateFormat.wdshort date
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              <div
                class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                inputmode="numeric"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dateFormat.wdshort date ALO"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                    id="_r_2_"
                    pattern="[0-9]{1,3}"
                    style="padding: 4px; text-align: right;"
                    type="text"
                    value="5"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-1nf2c5d-MuiNotchedOutlined-root"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              5
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              dateFormat.wdshort date
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              <div
                class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                inputmode="numeric"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dateFormat.wdshort date ALO"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                    id="_r_3_"
                    pattern="[0-9]{1,3}"
                    style="padding: 4px; text-align: right;"
                    type="text"
                    value="5"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-1nf2c5d-MuiNotchedOutlined-root"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              5
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              Yhteensä
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              10
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              10
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiFormHelperText-root Mui-error css-18y2hez-MuiFormHelperText-root"
      />
    </div>
  </div>
</div>
`;

exports[`EventFormPlaces > should render with classes but no class places (total mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-1c355sx"
  >
    <div
      class="MuiStack-root css-3jt9ux-MuiStack-root"
    >
      <div
        class="MuiStack-root css-ca49iu-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
        >
          event.placesEditor.title
        </h6>
        <div
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="total"
          >
            event.placesEditor.total
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-middleButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="-1"
            type="button"
            value="perDay"
          >
            event.placesEditor.perDay
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="-1"
            type="button"
            value="perClass"
          >
            event.placesEditor.perClass
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-1jpm9pd"
      >
        <div
          class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
          inputmode="numeric"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              aria-label="event.placesEditor.title"
              class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
              id="event.places"
              pattern="[0-9]{1,3}"
              style="padding: 4px; text-align: right;"
              type="text"
              value="10"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1nf2c5d-MuiNotchedOutlined-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root Mui-error css-18y2hez-MuiFormHelperText-root"
      />
    </div>
  </div>
</div>
`;

exports[`EventFormPlaces > should render with minimal information 1`] = `
<div>
  <div
    class="MuiBox-root css-1c355sx"
  >
    <div
      class="MuiStack-root css-3jt9ux-MuiStack-root"
    >
      <div
        class="MuiStack-root css-ca49iu-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
        >
          event.placesEditor.title
        </h6>
        <div
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="total"
          >
            event.placesEditor.total
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-1jpm9pd"
      >
        <div
          class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
          inputmode="numeric"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-invalid="false"
              aria-label="event.placesEditor.title"
              class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
              id="event.places"
              pattern="[0-9]{1,3}"
              style="padding: 4px; text-align: right;"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1nf2c5d-MuiNotchedOutlined-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <p
        class="MuiFormHelperText-root Mui-error css-18y2hez-MuiFormHelperText-root"
      />
    </div>
  </div>
</div>
`;

exports[`EventFormPlaces > should render with placesPerDay (per-day mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-1c355sx"
  >
    <div
      class="MuiStack-root css-3jt9ux-MuiStack-root"
    >
      <div
        class="MuiStack-root css-ca49iu-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-1i3tsf3-MuiTypography-root"
        >
          event.placesEditor.title
        </h6>
        <div
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="total"
          >
            event.placesEditor.total
          </button>
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1iki0ml-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="-1"
            type="button"
            value="perDay"
          >
            event.placesEditor.perDay
          </button>
        </div>
      </div>
      <table
        class="MuiTable-root css-1nkh8i9-MuiTable-root"
      >
        <thead
          class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-cdeinc-MuiTableCell-root"
              scope="col"
            >
              date
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeSmall css-m4o53m-MuiTableCell-root"
              scope="col"
            >
              Paikat
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              dateFormat.wdshort date
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              <div
                class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                inputmode="numeric"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dateFormat.wdshort date Paikat"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                    id="_r_4_"
                    pattern="[0-9]{1,3}"
                    style="padding: 4px; text-align: right;"
                    type="text"
                    value="5"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-1nf2c5d-MuiNotchedOutlined-root"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              dateFormat.wdshort date
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              <div
                class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                inputmode="numeric"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="dateFormat.wdshort date Paikat"
                    class="MuiInputBase-input MuiOutlinedInput-input css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
                    id="_r_5_"
                    pattern="[0-9]{1,3}"
                    style="padding: 4px; text-align: right;"
                    type="text"
                    value="5"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-1nf2c5d-MuiNotchedOutlined-root"
                    >
                      <span
                        aria-hidden="true"
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
              scope="row"
            >
              Yhteensä
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-sizeSmall css-wsxt5g-MuiTableCell-root"
            >
              10
            </td>
          </tr>
        </tbody>
      </table>
      <p
        class="MuiFormHelperText-root Mui-error css-18y2hez-MuiFormHelperText-root"
      />
    </div>
  </div>
</div>
`;
